[metadata]
name = pipe
version = attr: pipe.__version__
author = Julien Palard
author_email = julien@palard.fr
license = MIT license
description = Module enablig a sh like infix syntax (using pipes)
url = https://github.com/JulienPalard/Pipe
download_url = https://github.com/JulienPalard/Pipe/tarball/master
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules

[options]
py_modules = pipe
